--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.2",
     "@types/react-native-vector-icons": "^6.4.18",
     "apisauce": "^3.0.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-simple-toast": "^3.3.1",
     "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
